# nineveh

./: .gitignore  README.md  _langchain.ipynb  _spacy_.ipynb  pyproject.toml  scraper_bot.py
bertserini/: README.md
falcon_7b/: README.md  falcon_peft.py  falcon_test_flight.py
langchain_tutorials/: README.md
openai_tutorials_and_examples/: config.py  qa_bot.py  test.py  tokenise.py
pytorch_examples/question-answering/: README.md  run_qa_beam_search.py
resume_copilot/: ai_improver.py  app.py  constants.py  cv_scanner.py  main.py  utils.py
smart_study_buddy/: README.md  llm_functions.py  prompts.py  requirements.txt  smart_study_buddy.py
src/: QA_notebook.ipynb  huggingface_approach.ipynb  pytorch_notebook.ipynb  qa_with_t5.ipynb  question_answering.ipynb
tests/: gpu_testing.ipynb
