[tool.poetry]
name = "nineveh"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
fastai = "^2.7.12"
tiktoken = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

